# fs-container-app

./: CLAUDE.md  Cargo.toml  README.md  build.rs  package.toml
proto/: container_app.proto
src/: app.rs  build_view.rs  cli.rs  controller.rs  grpc.rs  instance_config.rs  lib.rs  log_viewer.rs  main.rs  model.rs  rest.rs  service_detail.rs  service_list.rs  settings_container_component.rs  status.rs  view.rs
