[package]
name        = "fs-container-app"
description = "FreeSynergy Desktop – Container App: container, service and bot management"
version     = "0.1.0"
edition     = "2021"
license     = "MIT"
authors     = ["FreeSynergy.Net"]
repository  = "https://github.com/FreeSynergy/fs-container-app"

[lib]
name = "fs_container_app"
path = "src/lib.rs"

[[bin]]
name = "fs-container-app"
path = "src/main.rs"

[features]
default  = ["desktop"]
desktop  = ["dioxus/desktop", "fs-components/desktop"]
web      = ["dioxus/web",     "fs-components/web"]

[dependencies]
fs-components = { path = "../fs-components" }
fs-container  = { path = "../fs-container" }
fs-error      = { path = "../fs-libs/fs-error" }
fs-i18n       = { path = "../fs-i18n", features = ["dioxus"] }
dioxus        = { version = "0.7.3", default-features = false, features = ["macro", "html", "signals", "hooks", "launch"] }
serde         = { version = "1", features = ["derive"] }
toml          = { version = "1", features = ["preserve_order"] }
tokio         = { version = "1", features = ["full"] }

# ── Local patches ──────────────────────────────────────────────────────────────
# Keep in sync with fs-desktop patch.
[patch.crates-io]
dioxus-desktop = { path = "../fs-desktop/vendor/dioxus-desktop" }
